kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: opa-demo
spec:
  selector:
    app: opademo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
